--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <label class="search" for="words">Add a word:</label>
 <input type="text" name="search-word" id="js-word">
 <input type="submit" value="SEARCH" class="button"><br>
-<input type="button" value="Dictionary" class="button" id="dictBtn">
+<!-- <input type="button" value="Dictionary" class="button" id="dictBtn"> -->
 <!-- <input type="button" value="Thesaurus" class="button" id="thesBtn"> -->
 </form>
 
