--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="container">
-<h1>Find Your Word</h1>
+<h1>Daily Workbook</h1>
 <form>
 <label class="search" for="words">Add a word:</label>
 <input type="text" name="search-word" id="js-word">
