--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <input type="submit" value="SEARCH" class="srcButton"><br>
 <input type="button" value="Dictionary" class="button" id="dictBtn">
 <input type="button" value="Thesaurus" class="button" id="thesBtn">
-<input type="button" value="Text to Speech" class="button" onclick="ShowHideSpeechContent()">
+<input type="button" value="Text to Speech" class="button">
 </form>
 
 <section class="results">
